<resources>
    <string name="app_name">ePOS-Print</string>
    <string name="main_button_discovery">Printer Discovery</string>
    <string name="main_button_open">Open</string>
    <string name="main_button_close">Close</string>
    <string name="main_button_text">Text</string>
    <string name="main_button_image">Image</string>
    <string name="main_button_barcode">Barcode</string>
    <string name="main_button_2dcode">2D Code</string>
    <string name="main_button_pagemode">Page Mode</string>
    <string name="main_button_cut">Cut</string>
    <string name="main_button_getstatustate">Get Status</string>
    <string name="main_button_getname">Get Printer Name</string>
    <string name="discovery_label_devtype">Device Type</string>
    <string name="discovery_radio_tcp">TCP(Wi-Fi)</string>
    <string name="discovery_radio_blueooth">Bluetooth</string>
    <string name="discovery_radio_usb" >USB</string>
    <string name="discovery_label_printerlist">Printer List</string>
    <string name="open_button_open">Open</string>
    <string name="open_label_devtype">Device Type</string>
    <string name="open_radio_tcp">TCP(Wi-Fi)</string>
    <string name="open_radio_blueooth">Bluetooth</string>
    <string name="open_radio_usb">USB</string>
    <string name="open_label_ip">IP Address / MAC Address / USB Device Node</string>
    <string name="open_label_pritner">Printer Name</string>
    <string name="open_label_langname">Language</string>
    <string name="text_button_print">Print</string>
    <string name="text_label_text">Print Characters</string>
    <string name="text_edit_text">123xxstreet,xxxcity,xxxxstate\n******TEL**9999-99-9999****C#2\n***November.23,*2007***PM*4:24\napples******************$20.00\ngrapes******************$30.00\nbananas*****************$40.00\nlemons******************$50.00\noranges*****************$60.00\nTax*excluded.**********$200.00\nTax*****5.0%************$10.00\n______________________________\nTotal******************$210.00\n</string>
    <string name="text_label_font">Font</string>
    <string name="text_label_align">Align</string>
    <string name="text_label_linespace">Line Spacing</string>
    <string name="text_label_language">Language</string>
    <string name="text_label_size">Size(Width, Height)</string>
    <string name="text_label_style">Style</string>
    <string name="text_label_style_bold">Bold</string>
    <string name="text_label_underline">Underline</string>
    <string name="text_label_xpositon">X Position</string>
    <string name="text_label_feedunit">Feed Unit</string>
    <string name="image_button_print">Print</string>
    <string name="image_button_select">Select Image</string>
    <string name="image_view_preview">preview</string>
    <string name="barcode_button_print">Print</string>
    <string name="barcode_label_type">Type</string>
    <string name="barcode_label_data">Data</string>
    <string name="barcode_label_hri">HRI</string>
    <string name="barcode_label_font">Font</string>
    <string name="barcode_label_modulesize">Module Size(Width, Height)</string>
    <string name="code2d_button_print">Print</string>
    <string name="code2d_label_type">Type</string>
    <string name="code2d_label_data">Data</string>
    <string name="code2d_label_level">Error Correction Level</string>
    <string name="code2d_label_modulesize">Module Size(Width, Height)</string>
    <string name="code2d_label_maxsize">Max Size</string>
    <string name="pagemode_button_print">Print</string>
    <string name="pagemode_label_text">Print Characters</string>
    <string name="pagemode_label_area">Print Area(X, Y, Width, Height)</string>
    <string name="cut_button_print">Print</string>
    <string name="cut_label_type">Type</string>
    <string name="getname_button_get">Get Printer Name</string>
    <string name="getname_label_devtype">Device Type</string>
    <string name="getname_radio_tcp">TCP(Wi-Fi)</string>
    <string name="getname_radio_blueooth">Bluetooth</string>
    <string name="getname_radio_usb">USB</string>
    <string name="getname_label_ip">IP Address / MAC Address / USB Device Node</string>
    <string name="printername_t88v">TM-T88V</string>
    <string name="printername_t70">TM-T70</string>
    <string name="printername_u220">TM-U220</string>
    <string name="printername_u330">TM-U330</string>
    <string name="printername_p60">TM-P60</string>
    <string name="printername_p60ii">TM-P60II</string>
    <string name="printername_t20">TM-T20</string>
    <string name="printername_t82">TM-T82</string>
    <string name="printername_t81ii">TM-T81II</string>
    <string name="printername_t82ii">TM-T82II</string>
    <string name="printername_t83ii">TM-T83II</string>
    <string name="printername_t70ii">TM-T70II</string>
    <string name="printername_t90ii">TM-T90II</string>
    <string name="printername_t20ii">TM-T20II</string>
    <string name="printername_p20">TM-P20</string>
    <string name="printername_p80">TM-P80</string>
    <string name="printername_m10">TM-m10</string>
    <string name="language_ank">ANK</string>
    <string name="language_japanese">JAPANESE</string>
    <string name="language_simplified_chinese">SIMPLIFIED CHINESE</string>
    <string name="language_traditional_chinese">TRADITIONAL CHINESE</string>
    <string name="language_korean">KOREAN</string>
    <string name="language_thai">THAI</string>
    <string name="language_vietnamese">VIETNAMESE</string>
    <string name="language_other">Other</string>
    <string name="font_a">Font A</string>
    <string name="font_b">Font B</string>
    <string name="font_c">Font C</string>
    <string name="font_d">Font D</string>
    <string name="font_e">Font E</string>
    <string name="align_left">Left</string>
    <string name="align_center">Center</string>
    <string name="align_right">Right</string>
    <string name="bartype_upca">UPC-A</string>
    <string name="bartype_upce">UPC-E</string>
    <string name="bartype_ean13">EAN13</string>
    <string name="bartype_jan13">JAN13</string>
    <string name="bartype_ean8">EAN8</string>
    <string name="bartype_jan8">JAN8</string>
    <string name="bartype_code39">CODE39</string>
    <string name="bartype_itf">ITF</string>
    <string name="bartype_codabar">CODABAR</string>
    <string name="bartype_code93">CODE93</string>
    <string name="bartype_code128">CODE128</string>
    <string name="bartype_gs1128">GS1-128</string>
    <string name="bartype_gs1om">GS1 DataBar Omnidirectional</string>
    <string name="bartype_gs1tr">GS1 DataBar Truncated</string>
    <string name="bartype_gs1li">GS1 DataBar Limited</string>
    <string name="bartype_gs1ex">GS1 DataBar Expanded</string>
    <string name="bardata_upca">01234567890</string>
    <string name="bardata_upce">01234500005</string>
    <string name="bardata_ean13">201234567890</string>
    <string name="bardata_jan13">201234567890</string>
    <string name="bardata_ean8">2012345</string>
    <string name="bardata_jan8">2012345</string>
    <string name="bardata_code39">ABCDE</string>
    <string name="bardata_itf">012345</string>
    <string name="bardata_codabar">A012345A</string>
    <string name="bardata_code93">ABCDE</string>
    <string name="bardata_code128">{Babcde</string>
    <string name="bardata_gs1128">(01)201234567890*</string>
    <string name="bardata_gs1om">0201234567890</string>
    <string name="bardata_gs1tr">0201234567890</string>
    <string name="bardata_gs1li">0201234567890</string>
    <string name="bardata_gs1ex">(01)2012345678903</string>
    <string name="code2type_pdf417s">Standard PDF417</string>
    <string name="code2type_pdf417t">Truncated PDF417</string>
    <string name="code2type_qr1">QR Code Model 1</string>
    <string name="code2type_qr2">QR Code Model 2</string>
    <string name="code2type_maxcode2">MaxiCode Mode 2</string>
    <string name="code2type_maxcode3">MaxiCode Mode 3</string>
    <string name="code2type_maxcode4">MaxiCode Mode 4</string>
    <string name="code2type_maxcode5">MaxiCode Mode 5</string>
    <string name="code2type_maxcode6">MaxiCode Mode 6</string>
    <string name="code2type_gr1st">GS1 DataBar Stacked</string>
    <string name="code2type_gr1so">GS1 DataBar Stacked Omnidirectional</string>
    <string name="code2type_gr1es">GS1 DataBar Expanded Stacked</string>
    <string name="code2type_aztecfull">Aztec Code Full-Range</string>
    <string name="code2type_azteccompact">Aztec Code Compact</string>
    <string name="code2type_dmsquare">DataMatrix Square</string>
    <string name="code2type_dmrect_8rows">DataMatrix Rectangle 8 Rows</string>
    <string name="code2type_dmrect_12rows">DataMatrix Rectangle 12 Rows</string>
    <string name="code2type_dmrect_16rows">DataMatrix Rectangle 16 Rows</string>
    <string name="code2data_pdf417s">ABCDE</string>
    <string name="code2data_pdf417t">ABCDE</string>
    <string name="code2data_qr1">ABCDE</string>
    <string name="code2data_qr2">ABCDE</string>
    <string name="code2data_maxcode2">908063840\\x1d850\\x1d001\\x1d\\x04</string>
    <string name="code2data_maxcode3">908063840\\x1d850\\x1d001\\x1d\\x04</string>
    <string name="code2data_maxcode4">908063840\\x1d850\\x1d001\\x1d\\x04</string>
    <string name="code2data_maxcode5">908063840\\x1d850\\x1d001\\x1d\\x04</string>
    <string name="code2data_maxcode6">908063840\\x1d850\\x1d001\\x1d\\x04</string>
    <string name="code2data_gr1st">0201234567890</string>
    <string name="code2data_gr1so">0201234567890</string>
    <string name="code2data_gr1es">(01)02012345678903</string>
    <string name="code2data_aztecfull">ABCDE</string>
    <string name="code2data_azteccompact">ABCDE</string>
    <string name="code2data_dmsquare">ABCDE</string>
    <string name="code2data_dmrect_8rows">ABCDE</string>
    <string name="code2data_dmrect_12rows">ABCDE</string>
    <string name="code2data_dmrect_16rows">ABCDE</string>
    <string name="level_pdf417_0">Level 0</string>
    <string name="level_pdf417_1">Level 1</string>
    <string name="level_pdf417_2">Level 2</string>
    <string name="level_pdf417_3">Level 3</string>
    <string name="level_pdf417_4">Level 4</string>
    <string name="level_pdf417_5">Level 5</string>
    <string name="level_pdf417_6">Level 6</string>
    <string name="level_pdf417_7">Level 7</string>
    <string name="level_pdf417_8">Level 8</string>
    <string name="level_qr_l">Level L</string>
    <string name="level_qr_m">Level M</string>
    <string name="level_qr_q">Level Q</string>
    <string name="level_qr_h">Level H</string>
    <string name="hri_none">None</string>
    <string name="hri_above">Above</string>
    <string name="hri_below">Below</string>
    <string name="hri_both">Both</string>
    <string name="pagemode_edit_text">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="cuttype_nofeed">No Feed</string>
    <string name="cuttype_feed">Feed</string>
    <string name="empty">-</string>
    <string name="text_label_statusmonitor">Status Monitor</string>
    <string name="text_label_enabled">Enabled</string>
    <string name="text_label_interval">Interval</string>
    <string name="text_label_colormode">Color Mode</string>
    <string name="text_label_halftonemethod">Halftone Method</string>
    <string name="text_label_brightness">Brightness</string>
    <string name="main_button_logsettings">Log Settings</string>
    <string name="logsettings_button_setting">Setting</string>
    <string name="logsettings_label_enabled">Enabled</string>
    <string name="logsettings_label_ip">IP Address</string>
    <string name="logsettings_dummy_ip">192.168.192.168</string>
    <string name="logsettings_label_port">Port</string>
    <string name="logsettings_label_logsize">Log Size</string>
    <string name="logsettings_dummy_port">49152</string>
    <string name="logsettings_dummy_logsize">1</string>
    <string name="logsettings_label_savesettingspermanently">Save Settings Permanently</string>
    <string name="logsettings_label_loglevel">Log Level</string>
</resources>