<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="#FFFFFF">

    <Button
        android:id="@+id/button_print"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_button_print" android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_button_select" android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textView_colormode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label_colormode"
        android:textColor="#000000" />

    <Spinner
        android:id="@+id/spinner_colormode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TextView_halftonemethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label_halftonemethod"
        android:textColor="#000000" />

    <Spinner
        android:id="@+id/spinner_halftonemethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TextView_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label_brightness"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/editText_brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" android:text="1.0">

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_view_preview" />

</LinearLayout>
