<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/logsettings_button_setting" />

        <TextView
            android:id="@+id/textView_logsettings_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logsettings_label_enabled"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spinner_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_logsettings_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logsettings_label_ip"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editText_logsettings_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/logsettings_dummy_ip" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView_logsettings_port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/logsettings_label_port"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editText_logsettings_port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="number"
            android:text="@string/logsettings_dummy_port" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_logsettings_logsize"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/logsettings_label_logsize"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editText_logsettings_logsize"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="number"
                android:text="@string/logsettings_dummy_logsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_logsettings_loglevel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/logsettings_label_loglevel"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinner_loglevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_statusmonitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/logsettings_label_savesettingspermanently"
            android:textColor="#000000" />

        <ToggleButton
            android:id="@+id/toggleButton_logsettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="ToggleButton" />

    </LinearLayout>

</ScrollView>