<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getname_button_get"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textView_devicetype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getname_label_devtype"
            android:textColor="#000000"/>
    
        <RadioGroup android:id="@+id/radiogroup_devtype"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
    
            <RadioButton
                android:id="@+id/radioButton_tcp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/getname_radio_tcp"
                android:layout_weight="0.33"
                android:textColor="#000000"/>
    
            <RadioButton
                android:id="@+id/radioButton_bluetooth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/getname_radio_blueooth"
                android:layout_weight="0.33"
                android:textColor="#000000"/>
    
            <RadioButton
                android:id="@+id/radioButton_usb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/getname_radio_usb"
                android:layout_weight="0.33"
                android:textColor="#000000"/>
    
        </RadioGroup>

        <TextView
            android:id="@+id/textView_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getname_label_ip"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/editText_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </LinearLayout>
</ScrollView>